Set up loss function and optimizer and define accuracy calculation func

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM4h9MVtKveti7s8x0LDIf3",
+      "authorship_tag": "ABX9TyOvvFUB+q/hGx7JTjvrQmsF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "syG3QUMaHVGY"
       },
-      "execution_count": 69,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "aXEcw7sMHZxr"
       },
-      "execution_count": 70,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L-e1D4yoHzRk",
-        "outputId": "a159c6fb-080e-41c7-9834-2787f168de6a"
+        "outputId": "4a872c93-acba-4822-9e60-c2b5a983e1a4"
       },
-      "execution_count": 71,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 96
         }
       ]
     },
@@ -115,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pigwKcupH2sC",
-        "outputId": "fc092da3-6705-41fd-9a1c-7045976f1a40"
+        "outputId": "5360142c-6da3-440b-9171-7939c6f8549c"
       },
-      "execution_count": 72,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,9 +149,9 @@
           "height": 363
         },
         "id": "rYnk0D8kIFTs",
-        "outputId": "4780cb52-4c00-4db7-90bc-881ece58147f"
+        "outputId": "a66b47ee-dba4-4f9b-df45-d9ce00a354c9"
       },
-      "execution_count": 73,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e6a98ab5-916c-44d0-bda2-b554b2bf257c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-be4c4131-0223-4402-b2b3-9ecf27cf5ba7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -262,7 +262,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e6a98ab5-916c-44d0-bda2-b554b2bf257c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-be4c4131-0223-4402-b2b3-9ecf27cf5ba7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -314,12 +314,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e6a98ab5-916c-44d0-bda2-b554b2bf257c button.colab-df-convert');\n",
+              "        document.querySelector('#df-be4c4131-0223-4402-b2b3-9ecf27cf5ba7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e6a98ab5-916c-44d0-bda2-b554b2bf257c');\n",
+              "        const element = document.querySelector('#df-be4c4131-0223-4402-b2b3-9ecf27cf5ba7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -339,8 +339,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-50d760fe-a46c-417a-a8cb-ee5acec0fc01\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50d760fe-a46c-417a-a8cb-ee5acec0fc01')\"\n",
+              "<div id=\"df-677be305-c5d1-455e-a222-1f045d21843b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-677be305-c5d1-455e-a222-1f045d21843b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -459,7 +459,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-50d760fe-a46c-417a-a8cb-ee5acec0fc01 button');\n",
+              "        document.querySelector('#df-677be305-c5d1-455e-a222-1f045d21843b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -470,7 +470,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 98
         }
       ]
     },
@@ -490,19 +490,19 @@
           "height": 448
         },
         "id": "NLCHdYEPJAzN",
-        "outputId": "99e5eb69-399d-4b3e-f5dd-558a554805f6"
+        "outputId": "8c3a4c5f-a51b-44cc-c61e-f34ae4382e0f"
       },
-      "execution_count": 74,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7d8ae2ce9f30>"
+              "<matplotlib.collections.PathCollection at 0x7d8a9eb9a5f0>"
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 99
         },
         {
           "output_type": "display_data",
@@ -544,9 +544,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTbElUiPMegL",
-        "outputId": "d2771409-17ce-4d1a-bdf8-a4767c1da7d6"
+        "outputId": "e278f8a3-3d4b-45ee-cd7d-6c6ba7b12321"
       },
-      "execution_count": 75,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +556,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 100
         }
       ]
     },
@@ -575,9 +575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tiY7GFi1MgxR",
-        "outputId": "f30c680a-9d92-44c1-b54a-9301f7e84896"
+        "outputId": "2ec5ae80-e3e2-482f-be53-f69535ee5b39"
       },
-      "execution_count": 76,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +606,7 @@
       "metadata": {
         "id": "y8dE-THcNqe5"
       },
-      "execution_count": 77,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -619,9 +619,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sMoQRLxCO8Jo",
-        "outputId": "13678929-d2aa-4440-b43a-2d8901a89745"
+        "outputId": "c900ebef-9a81-4565-85db-8572334e987e"
       },
-      "execution_count": 78,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,7 +631,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 103
         }
       ]
     },
@@ -649,9 +649,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rjAsYf6KNr_8",
-        "outputId": "28522c3c-d7c8-4d84-e8fd-acde903962b7"
+        "outputId": "84917702-98cb-4afe-8b67-96812acacdd6"
       },
-      "execution_count": 79,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +666,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 104
         }
       ]
     },
@@ -680,9 +680,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ko7y7QAEODF8",
-        "outputId": "3eafa416-ff6d-472a-8b4f-421d0ba03635"
+        "outputId": "3a0ee3c6-8e20-4e92-e975-6bae4a253aa4"
       },
-      "execution_count": 80,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 80
+          "execution_count": 105
         }
       ]
     },
@@ -710,7 +710,7 @@
       "metadata": {
         "id": "QMEOp0NOPWci"
       },
-      "execution_count": 81,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -723,9 +723,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iy3lp5lAPj2G",
-        "outputId": "ed4afa16-7e46-4fe5-cfd6-1ab3629a2cf3"
+        "outputId": "aee3fefd-a986-437f-80aa-87c6b206a132"
       },
-      "execution_count": 82,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -735,7 +735,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 107
         }
       ]
     },
@@ -769,9 +769,9 @@
           "height": 35
         },
         "id": "r6nIRqlfyM3C",
-        "outputId": "12be3609-b500-4f81-be78-2a451440dddf"
+        "outputId": "eb35b200-b9b0-451d-84c9-84d27119059b"
       },
-      "execution_count": 83,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 108
         }
       ]
     },
@@ -827,9 +827,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ObRYTPfe0LQK",
-        "outputId": "ae0c4a0b-5b92-4de0-b1a3-2134e72f42f3"
+        "outputId": "900c942e-ded8-4b20-923b-579565ac9e5e"
       },
-      "execution_count": 84,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,7 +842,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 109
         }
       ]
     },
@@ -856,9 +856,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4JiZciJU5EAs",
-        "outputId": "79582b3b-1d43-4959-8482-5e867e09cc00"
+        "outputId": "45a8168b-4969-4553-d7ea-dba6a8f8ea7d"
       },
-      "execution_count": 85,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +868,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 110
         }
       ]
     },
@@ -888,9 +888,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G9mB0V7I5IKm",
-        "outputId": "78dcfa3f-d1ee-4a7e-dd59-5a530b0d7aa2"
+        "outputId": "0a9e5fd2-d1dd-4adf-b992-ab3f274206eb"
       },
-      "execution_count": 86,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -903,7 +903,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 111
         }
       ]
     },
@@ -923,9 +923,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VtODoArL9LJr",
-        "outputId": "63dbf35a-df66-4479-afed-c9a3d1607203"
+        "outputId": "d1821317-f189-4bf0-dc95-25c973691b09"
       },
-      "execution_count": 87,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,16 +935,16 @@
             "Length of test samples: 200, Shape: torch.Size([200, 2])\n",
             "\n",
             "First 10 predictions:\n",
-            " tensor([[-0.4162],\n",
-            "        [-0.4528],\n",
-            "        [-0.2965],\n",
-            "        [-0.4502],\n",
-            "        [-0.2590],\n",
-            "        [-0.2817],\n",
-            "        [-0.4146],\n",
-            "        [-0.3744],\n",
-            "        [-0.2983],\n",
-            "        [-0.4548]], device='cuda:0')\n",
+            " tensor([[ 0.0295],\n",
+            "        [-0.0191],\n",
+            "        [-0.1011],\n",
+            "        [ 0.0675],\n",
+            "        [-0.5107],\n",
+            "        [-0.5372],\n",
+            "        [-0.3495],\n",
+            "        [-0.4718],\n",
+            "        [-0.0836],\n",
+            "        [-0.0269]], device='cuda:0')\n",
             "\n",
             "First 10 labels:\n",
             "tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
@@ -962,9 +962,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uVOzQ-UeD517",
-        "outputId": "1886aedd-5a59-452d-9540-afd9a617fed4"
+        "outputId": "0ed18986-a3a1-489f-a8ab-46b2b3434714"
       },
-      "execution_count": 88,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,9 +984,64 @@
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 113
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.1 Set up a loss function and optimizer\n",
+        "\n",
+        "Which loss function or optimizer should you use?\n",
+        "\n",
+        "It is problem sprecific.\n",
+        "\n",
+        "For example for regression you might want MAE or MSE (mean absolute error or mean squared error)\n",
+        "\n",
+        "For classification you migt want a binary cross entropy or categorisal cross entropy\n",
+        "\n",
+        "Cross entropy explained - https://towardsdatascience.com/understanding-binary-cross-entropy-log-loss-a-visual-explanation-a3ac6025181a\n",
+        "\n",
+        "And for optimizers, two of the most common and useful are SGD and Adam, however Pytorch has many build-in options.\n",
+        "\n",
+        "* For the loss functionwe are going to use `torch.nn.BCEWithLogitsLoss()`"
+      ],
+      "metadata": {
+        "id": "VtywWNgEF9LD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set up BCE (Binary Cross Entropy) loss function\n",
+        "# if you use BCELoss you need to have your inputs to have gone through the sigmoid activation function prior to input to BCELoss\n",
+        "loss_fn = nn.BCEWithLogitsLoss() # BCEWithLogitsLoss = sigmoid activation function built-in\n",
+        "\n",
+        "# set up optimizer\n",
+        "optimizer = torch.optim.SGD(params=model_0.parameters(),\n",
+        "                            lr=0.1)\n"
+      ],
+      "metadata": {
+        "id": "3sW42UN8GfQQ"
+      },
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate accuracy - out of 100 examples, what percentage does our model get right\n",
+        "def accuracy_fn(y_true, y_pred):\n",
+        "  correct = torch.eq(y_true, y_pred).sum().item()\n",
+        "  acc = (correct/len(y_pred))\n",
+        "  return acc"
+      ],
+      "metadata": {
+        "id": "nQMjr_K7b6uf"
+      },
+      "execution_count": 116,
+      "outputs": []
     }
   ]
 }
