Add theory slide for BCE and sigmoid activation func

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOvvFUB+q/hGx7JTjvrQmsF",
+      "authorship_tag": "ABX9TyMRph+m6uCSvLIxs6n2x7jg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1012,10 +1012,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- If you use BCELoss you need to have your inputs to have gone through the sigmoid activation function prior to input to BCELoss\n",
+        "- Sigmoid activation function - prepares the data in a form of a sigmoid function (from 0 to 1) so latar it can pass through the BCE\n",
+        "- Cross entropy -  way to measure how different one set of probabilities is from another (in the case of machine learning it measures how well the prediction was from the actual probabilities)\n",
+        "- Since we’re trying to compute a loss, we need to penalize bad predictions. If the probability associated with the true class is 1.0, we need its loss to be 0. Conversely, if that probability is low, say, 0.01, we need its loss to be huge. It turns out, taking the (negative) log of the probability suits us well enough for this purpose"
+      ],
+      "metadata": {
+        "id": "VhCgtOTOUZjm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# set up BCE (Binary Cross Entropy) loss function\n",
-        "# if you use BCELoss you need to have your inputs to have gone through the sigmoid activation function prior to input to BCELoss\n",
         "loss_fn = nn.BCEWithLogitsLoss() # BCEWithLogitsLoss = sigmoid activation function built-in\n",
         "\n",
         "# set up optimizer\n",
@@ -1025,7 +1036,7 @@
       "metadata": {
         "id": "3sW42UN8GfQQ"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1041,6 +1052,15 @@
         "id": "nQMjr_K7b6uf"
       },
       "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eoHXEw-MUN0n"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
